chore: update nullability plugin dependencies